Fix button spacing, add event delegation, refactor
Button spacing was slightly unmatched before.
Now the widths match. Also refactored code so that
the style is cleaner and the player buttons are
handled by a single addeventlistener instead of two.

--- a/styles.css
+++ b/styles.css
@@ -24,14 +24,19 @@ body{
 button{
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     font-weight: 100;
+    width: 200px;
     font-size: 50px;
     background-color: #5BCEFA;
-    margin-right: 50px;
     padding-top: 100px;
     padding-bottom: 100px;
     color: #545454;
     border-radius: 60px;
+    box-sizing: border-box;
     border: none;
+}
+
+.clear{
+    padding-right: 15px;
 }
 
 .playerbuttons{
